--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -913,18 +913,20 @@ input[type="checkbox"]{
 .notification-content {
   display: inline-block;
   position: relative;
-  top: -4px;
   left: 10px;
   font-weight: bolder;
   color: black;
+  word-wrap: break-word;
+  width: 80%
 }
 
 .notification-date {
   display: inline-block;
   position: relative;
   top: 6px;
-  float: right;
+  right: 0px;
   font-size: 12px;
+  vertical-align: top;
 }
 
 .notification-link {
@@ -982,7 +984,7 @@ input[type="checkbox"]{
 }
 
 .form-button {
-  float: right;
+  width: 100%;
 }
 
 .form-container-sign-up {
@@ -1406,4 +1408,8 @@ input[type="checkbox"]{
   border-radius: 25px;
   margin-bottom: 10px;
   padding: 15px;
+}
+
+.notification-checkbox {
+  vertical-align: top;
 }
