--- a/marketapp/listings/templates/items/item_detail.html
+++ b/marketapp/listings/templates/items/item_detail.html
@@ -40,14 +40,16 @@
           {% else %}
             <img src="{{ image.image.url }}" class="item-detail-image"></img><br>
           {% endif %}
-          <div>
-            <a href="{% url 'report-image' pk=image.pk %}">
-              <div class="btn btn-red" style="margin-top: 5px; width: 85px;
-                height: 30px; font-size: 12px; padding: 4px 0px 0px 0px;">
-                Report Image
-              </div>
-            </a>
-          </div>
+          {% if request.user != image.owner %}
+            <div>
+              <a href="{% url 'report-image' pk=image.pk %}">
+                <div class="btn btn-red" style="margin-top: 5px; width: 85px;
+                  height: 30px; font-size: 12px; padding: 4px 0px 0px 0px;">
+                  Report Image
+                </div>
+              </a>
+            </div>
+          {% endif %}
         {% endfor %}
       {% endif %}
     </div>
