--- a/marketapp/listings/templates/listings/create_bid.html
+++ b/marketapp/listings/templates/listings/create_bid.html
@@ -6,6 +6,12 @@
     <div class="form-container-bids center-block">
       <form enctype="multipart/form-data" method="post" action="">
         {% csrf_token %}
+        {% if form.non_field_errors %}
+          <div style="color: red; font-weight: bold;:">
+            Please fix the following errors:<br>
+            {{ form.non_field_errors }}
+          </div>
+        {% endif %}
         {% for field in form %}
           <p>
             <div style="block">
