--- a/marketapp/listings/templates/registration/login.html
+++ b/marketapp/listings/templates/registration/login.html
@@ -39,8 +39,8 @@
         </form>
 
         {# Assumes you setup the password_reset view in your URLconf #}
-        <div style="float: right; text-align: right;"><a href="{% url 'password_reset' %}">Lost password?</a><br>
-        <a href="{% url 'signup' %}">Sign Up</a></div>
+        <div><a href="{% url 'password_reset' %}">Lost password?</a> | 
+        <a href="{% url 'signup' %}" style="margin-bottom: 10px;">Sign Up</a></div>
       </div>
     </div>
   {% endif %}
