Added elaboration on what wishlists are intended for

--- a/marketapp/listings/templates/FAQ/wishlists.html
+++ b/marketapp/listings/templates/FAQ/wishlists.html
@@ -3,6 +3,12 @@
 {% block content %}
   <div class="back-to-link"><a href="{% url 'faq' %}">«Back to FAQ</a></div>
   <div class="how-to-content col-md-10">
+    <h1>What is a Wishlist For?</h1>
+    <p>Wishlists are to allow users to create a list of items that they want.
+      These items could be items that you would want to buy from other users
+      or items that you would want to trade for.  Users can then create listings
+      to seek out these items so that users that own the items can get in contact
+      with them to negotiate a trade or sale</p>
     <h1>How to Create a Wishlist</h1>
     <p>Users have the option of creating a wishlist to organize items that they are searching for
       onto one page.  In order to create your wishlist, go to the navigation bar in the top right
