--- a/marketapp/listings/templates/wishlists/create_wishlist.html
+++ b/marketapp/listings/templates/wishlists/create_wishlist.html
@@ -3,6 +3,10 @@
 {% block content %}
   <div class="center-block col-lg-10">
     <h2 style="text-align: center;">Create Wishlist</h2>
+    <h6 style="text-align: center" class="col-lg-6 center-block">
+      A wishlist allows you to create a list of items that you may want to
+      buy or trade for from other users.  Creating a wishlist is not neccessary
+      to use the site, it is optional.</h6>
     <div class="form-container-wishlists center-block">
       <form enctype="multipart/form-data" method="post" action="">
         {% csrf_token %}
